addExercise, getDiary swagger
rewring addExercise controller, adds swagger for getting allDiary information
